add desktop layout

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -10,7 +10,9 @@ $dark-blue: hsl(249, 10%, 26%);
 $grayish-blue: hsl(246, 25%, 77%);
 
 // font-size
+$fs-md: 1.25rem;
 $fs-rg: 1rem;
+
 $fs-sm: 0.825rem;
 $fs-xs: 0.775rem;
 
